# ai-agent-work-base

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  ruff.toml
docs/: concept.md  parallel_execution_design.md  workflow-spec.md
src/ai_agent_work_base/: __main__.py  app.py  cli.py  webhook.py
src/ai_agent_work_base/core/: agent.py  llm.py  tool.py  workflow.py
src/ai_agent_work_base/engine/: context.py  executor.py  loader.py  slack_trigger.py  trigger_runner.py
src/ai_agent_work_base/planning/: agent.py  executor.py  models.py  planner.py
src/ai_agent_work_base/schemas/: trigger.py  workflow.py
src/ai_agent_work_base/skills/: __init__.py  base.py  basic.py  email_send.py  file.py  math.py  pptx_generation.py  pptxjs_generation.py  presentation.py  push_notify.py  research.py  self_debug.py  slack.py
src/ai_agent_work_base/skills/pptxjs_env/: package-lock.json
src/ai_agent_work_base/tools/: basic_tools.py  file_tools.py  math_tools.py  visualize.py
src/ai_agent_work_base/workflow/: sequential_workflow.py
tests/: test_agent.py  test_core.py  test_engine.py  test_foreach.py  test_model_override.py  test_planning.py  test_planning_agent.py  test_pptx_generation.py  test_pptxjs_generation.py  test_self_debug_skill.py  test_slack_skill.py  test_tools.py  test_webhook.py
triggers/: morning_news.yaml
workflows/: daily_news.yaml  deep_research.yaml  inquiry_response.yaml  presentation.yaml
